# Meme-engine

./: .gitignore  CMakeLists.txt
data/: save.json
src/: camera.cpp  camera.h  exceptions.cpp  exceptions.hpp  game.cpp  game.hpp  main.cpp  scene.hpp
src/animatrons/: animatron.cpp  animatron.hpp  light.cpp  light.hpp  papyrus.cpp  papyrus.hpp
src/cameras/: .cameras.cpp.kate-swp  camera.cpp  camera.hpp  camera_panel.cpp  camera_panel.hpp  cameras.cpp  cameras.hpp
src/data handlers/: audio_manager.cpp  audio_manager.hpp  parameters.cpp  parameters.hpp  saver.cpp  saver.hpp  telephone.cpp  time_maneger.hpp
src/event system/: events.hpp  observer.hpp
src/exceptions/: meme_exception.cpp  meme_exception.hpp
src/menu/: .menu.hpp.kate-swp  menu.cpp  menu.hpp  options.cpp  options.hpp  sound_options.cpp  sound_options.hpp  volume_manipulator.cpp  volume_manipulator.hpp
src/office/: button.cpp  button.hpp  door.cpp  door.hpp  office.cpp  office.hpp  telephone.cpp  telephone.hpp
src/system/: menu.cpp  menu.hpp  menu_button.cpp  menu_button.hpp  options.cpp  options.hpp  parameters.cpp  parameters.hpp  subject.cpp  subject.hpp  telephone.cpp  telephone.hpp
src/system/graphics/: animation_manager.cpp  animation_manager.hpp  graphics_manager.cpp  graphics_manager.hpp  scenes.cpp  scenes.hpp  window_manager.cpp  window_manager.hpp
src/system/graphics/textures/: textures_manager.cpp  textures_manager.hpp
src/system/graphics/textures/implementation/: background_texture_manager.cpp  background_texture_manager.hpp  camera_texture_manager.cpp  camera_texture_manager.hpp
src/tools/: event.hpp  observer.cpp  observer.hpp  subject.cpp  subject.hpp
src/window system/: scene.cpp  scene.hpp  window_manager.cpp  window_manager.hpp
